<resources>

    <string name="app_name">TwitterModule</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_twitter_android">TwitterAndroid</string>
    <string name="title_activity_prepare_request_token">PrepareRequestTokenActivity</string>
    <string name="title_activity_show_tweets">ShowTweets</string>
    <string name="login">LOGIN</string>
    <string name="logout">LOGOUT</string>
    <string name="tweet">TWEET</string>
    <string name="message">ENTER TWEET MESSAGE</string>
    <string name="show">SHOW TWEETS</string>
    <string name="username">ENTER  USERNAME</string>

</resources>